--- a/index.ipynb
+++ b/index.ipynb
@@ -439,13 +439,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set"
+    "unique_countries = set(countries)"
    ]
   },
   {
