--- a/index.ipynb
+++ b/index.ipynb
@@ -439,11 +439,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
