--- a/index.ipynb
+++ b/index.ipynb
@@ -448,11 +448,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'South Korea',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'USA',\n",
+       " 'Malta',\n",
+       " 'Mexico',\n",
+       " 'Finland',\n",
+       " 'Morocco',\n",
+       " 'Argentina']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
     "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
