--- a/index.ipynb
+++ b/index.ipynb
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -494,13 +494,13 @@
        "13"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_)\n",
+    "num_of_repeats = len(unique_countries) - len(countries)\n",
     "num_of_repeats # 3\n",
     "len(countries)"
    ]
