--- a/index.ipynb
+++ b/index.ipynb
@@ -485,24 +485,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "3"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries) - len(countries)\n",
-    "num_of_repeats # 3\n",
-    "len(countries)"
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
+    "num_of_repeats # 3"
    ]
   },
   {
